--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<div class="row">
+  <div class="col">
+    <div class="alert alert-success">
+      home works!
+    </div>
+  </div>
+</div>
