Use font awesome by the SCSS way, not Angular

--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -3,3 +3,5 @@
 @import "~bootswatch/dist/materia/variables";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/materia/bootswatch";
+
+@import "~@fortawesome/fontawesome-free/css/all.min.css";
