--- a/front-end/src/app/components/login/login.component.html
+++ b/front-end/src/app/components/login/login.component.html
@@ -1,7 +1,16 @@
 <div class="row">
   <div class="col">
-    <div class="alert alert-success">
-      login works!
-    </div>
+    <h1>teste</h1>
+    <form class="form-group">
+      <div class="row">
+      <mat-form-field class="example-full-width">
+        <input matInput placeholder="Favorite food" value="Sushi">
+      </mat-form-field>
+      </div>
+
+      <mat-form-field class="example-full-width">
+        <textarea matInput placeholder="Leave a comment"></textarea>
+      </mat-form-field>
+    </form>
   </div>
 </div>
