--- a/front-end/src/styles.scss
+++ b/front-end/src/styles.scss
@@ -5,3 +5,6 @@
 @import "~bootswatch/dist/materia/bootswatch";
 
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
